tests/e2e/not_allowed/type.error
Error: syntax error in story at line 1, column 1

1|    type = 1
      ^^^^

E0030: `type` is reserved for future use
